--- a/index.html
+++ b/index.html
@@ -1,121 +1,227 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>D3: A chart transition with controlled duration</title>
-		<script src="https://d3js.org/d3.v4.min.js"></script>
-		<style type="text/css">
-			/* No style rules here yet */
-		</style>
-	</head>
-	<body>
+  <head>
+    <meta charset="utf-8">
+    <title>Animate a line</title>
 
-		<p>Click on this text to update the chart with new data values (once).</p>
 
-		<script type="text/javascript">
+<style>
 
-			//Width and height
-			var w = 600;
-			var h = 250;
+body {
+  font-family: sans-serif;
+}
 
-			var dataset = [ 5, 10, 13, 19, 21, 25, 22, 18, 15, 13,
-							11, 12, 15, 20, 18, 17, 16, 18, 23, 25 ];
 
-			var xScale = d3.scaleBand()
-							.domain(d3.range(dataset.length))
-							.rangeRound([0, w])
-							.paddingInner(0.05);
+a {
+	font-size:20px;
+	margin-right:30px;
+}
 
-			var yScale = d3.scaleLinear()
-							.domain([0, d3.max(dataset)])
-							.range([0, h]);
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
 
-			//Create SVG element
-			var svg = d3.select("body")
-						.append("svg")
-						.attr("width", w)
-						.attr("height", h);
+.line {
+  fill:none;
+}
 
-			//Create bars
-			svg.selectAll("rect")
-			   .data(dataset)
-			   .enter()
-			   .append("rect")
-			   .attr("x", function(d, i) {
-			   		return xScale(i);
-			   })
-			   .attr("y", function(d) {
-			   		return h - yScale(d);
-			   })
-			   .attr("width", xScale.bandwidth())
-			   .attr("height", function(d) {
-			   		return yScale(d);
-			   })
-			   .attr("fill", function(d) {
-					return "rgb(0, 0, " + Math.round(d * 10) + ")";
-			   });
+.x.axis path {
+  display: inline;
+}
 
-			//Create labels
-			svg.selectAll("text")
-			   .data(dataset)
-			   .enter()
-			   .append("text")
-			   .text(function(d) {
-			   		return d;
-			   })
-			   .attr("text-anchor", "middle")
-			   .attr("x", function(d, i) {
-			   		return xScale(i) + xScale.bandwidth() / 2;
-			   })
-			   .attr("y", function(d) {
-			   		return h - yScale(d) + 14;
-			   })
-			   .attr("font-family", "sans-serif")
-			   .attr("font-size", "11px")
-			   .attr("fill", "white");
+.y.axis path {
+  display: none;
+}
 
 
 
-
-			//On click, update with new data
-			d3.select("p")
-				.on("click", function() {
-
-					//New values for dataset
-					dataset = [ 11, 12, 15, 20, 18, 17, 16, 18, 23, 25,
-								5, 10, 13, 19, 21, 25, 22, 18, 15, 13 ];
-
-					//Update all rects
-					svg.selectAll("rect")
-					   .data(dataset)
-					   .transition()
-					   .duration(1000)								// <-- Controlled duration, 1000ms = 1s
-					   .attr("y", function(d) {
-					   		return h - yScale(d);
-					   })
-					   .attr("height", function(d) {
-					   		return yScale(d);
-					   })
-					   .attr("fill", function(d) {
-							return "rgb(0, 0, " + Math.round(d * 10) + ")";
-					   });
-
-					//Update all labels
-					svg.selectAll("text")
-					   .data(dataset)
-					   .text(function(d) {
-					   		return d;
-					   })
-					   .attr("x", function(d, i) {
-					   		return xScale(i) + xScale.bandwidth() / 2;
-					   })
-					   .attr("y", function(d) {
-					   		return h - yScale(d) + 14;
-					   });
-
-				});
+.axis.y .tick line 		{
+stroke-width:1px;
+stroke:#ccc;
+stroke-opacity:1;
+}
 
 
-		</script>
-	</body>
+
+</style>
+<body>
+
+<div id="chart"> </div>
+
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+
+<script>
+
+document.addEventListener('DOMContentLoaded', function(){
+    // your code goes here
+
+		makeChart();
+
+}, false);
+
+		function makeChart() {
+
+			// Load in the data now...
+			d3.csv("old_data.csv", function(error, data) {
+
+  			//Get width of page
+  			var chartwidth = parseInt(d3.select("#chart").style("width"));
+
+  			// Set the margins
+  			var margin = {top: 20, right: 15, bottom: 30, left: 60},
+  				width = chartwidth - margin.left - margin.right,
+  				height = 430 - margin.top - margin.bottom;
+
+  			// Set up the format to match that of the data that is being read in - have a look here for a list of formats - https://github.com/mbostock/d3/wiki/Time-Formatting
+  			var parseDate = d3.time.format("%Y").parse;
+
+  			// Setting up the scaling objects
+  			var x = d3.time.scale()
+  				.range([0, width]);
+
+  			// Same for the y axis
+  			var y = d3.scale.linear()
+  				.range([height, 0]);
+
+  			// Same for colour.
+  			var color = d3.scale.category10();
+
+  			//Setting x-axis up here using x scaling object
+  			var xAxis = d3.svg.axis()
+  				.scale(x)
+  				.orient("bottom");
+
+  			//Setting y-axis up here using y scaling object
+  			var yAxis = d3.svg.axis()
+  				.scale(y)
+  				.orient("left")
+  				.tickSize(-width);
+
+  			// Setting up a d3 line object - used to draw lines later
+  			var line = d3.svg.line()
+  				.x(function(d) { return x(d.date); })
+  				.y(function(d) { return y(d.population); });
+
+
+  			// Now to actually make the chart area
+  			var svg = d3.select("#chart").append("svg")
+  				.attr("class", "svgele")
+  				.attr("id", "svgEle")
+  				.attr("width", width + margin.left + margin.right)
+  				.attr("height", height + margin.top + margin.bottom)
+  			  .append("g")
+  				.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+
+			   color.domain(d3.keys(data[0]).filter(function(key) { return key !== "date"; }));
+
+  			  // Take each row and put the date column through the parsedate form we've defined above.
+  			  data.forEach(function(d) {
+                console.log(d);
+  				      d.date = parseDate(d.date);
+  			  });
+
+
+  			  // Building an object with all the data in it for each line
+  			  projections = color.domain().map(function(name) {
+    				return {
+    				  name: name,
+    				  values: data.map(function(d) {
+    					       return {date: d.date, population: +d[name]};
+    					 })
+    				};
+  			  });
+
+			    // Set the domain of the x-value
+			    x.domain(d3.extent(data, function(d) { return d.date; }));
+
+			    // Do the same for the y-axis...[0,800000] by looking at the minimum and maximum for the population variable.
+  			  y.domain([
+  				      d3.min(projections, function(c) { return d3.min(c.values, function(v) { return v.population; }); }),
+  				      d3.max(projections, function(c) { return d3.max(c.values, function(v) { return v.population; }); })
+  			  ]);
+
+  			  // Bind the x-axis to the svg object
+  			  svg.append("g")
+  				  .attr("class", "x axis")
+  				  .attr("transform", "translate(0," + height + ")")
+  				  .call(xAxis)
+  				.append("text")
+  				  .attr("y", 40)
+  				  .attr("x", width/2 ) //place the year label in the middle of the axis
+  				  .attr("dx", ".71em")
+  				  .style("text-anchor", "end")
+  				  .text("Year");
+
+  				// append the yAxis and add label as before.
+  			  svg.append("g")
+  				  .attr("class", "y axis")
+  				  .attr("id", "#yAxis")
+  				  .call(yAxis)
+  				.append("text")
+  				  .attr("y", 0)
+  				  .attr("x", -60)
+  				  .attr("dy", ".71em")
+  				  .style("text-anchor", "start")
+  				  .text("Population (Thousands)");
+
+  				//create proj
+  				var proj = svg.selectAll(".proj")
+  						.data(projections)
+  						.enter()
+  						.append("g")
+  						.attr("class", "proj");
+
+  				// Drawing the lines
+  					proj.append("path")
+  						.attr("class", "line")
+  						.attr("id" , function(d, i) {
+  							return "line" + i;
+  						})
+  						.attr("stroke-linecap","round")
+  					  .attr("d", function(d,i) {
+  						  return line(d.values);
+  						 })
+  					  .style("stroke", function(d) { return "#666"; });
+
+				   //Initially set the lines to not show
+				   d3.selectAll(".line").style("opacity","0");
+
+				   //Draw single line onload
+				   animatelines();
+		   });
+
+		}
+
+
+		function animatelines() {
+        // add opacity to all lines
+				d3.selectAll(".line").style("opacity","0.5");
+
+				//Select All of the lines and process them one by one
+				d3.selectAll(".line").each(function(d,i){
+
+				// Get the length of each line in turn
+				var totalLength = d3.select("#line" + i).node().getTotalLength();
+
+					d3.selectAll("#line" + i).attr("stroke-dasharray", totalLength + " " + totalLength)
+					  .attr("stroke-dashoffset", totalLength)
+					  .transition()
+					  .duration(2000)
+					  .delay(100*i)
+					  .ease("linear") //Try linear, quad, bounce... see other examples here - http://bl.ocks.org/hunzy/9929724
+					  .attr("stroke-dashoffset", 0)
+					  .style("stroke-width",3)
+				})
+	  }
+
+
+
+</script>
+
+</body>
+</head>
 </html>
